--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@types/mongodb": "^4.0.7",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
+    "ip": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.12.1",
+    "mongoose": "^6.8.0",
     "next": "13.0.6",
+    "next-auth": "^4.18.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "typescript": "4.9.3"
   }
 }
