--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
-    "cookie": "^0.5.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.6",
-    "ip": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
@@ -28,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1",
+    "request-ip": "^3.3.0",
     "typescript": "4.9.3"
   }
 }
